# smsparser

./: .gitignore  pyproject.toml
smsparser/: DirScaner.py  FileParser.py  RowParser.py  console.py  main.py  validator.py
