[tool.poetry]
name = "smsparser"
version = "0.1.0"
description = ""
authors = ["Ihor Yarovyy <Ihor.Yarovyy@ringcentral.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
click = "^8.1.7"
rich = "^13.9.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"

[tool.poetry.scripts]
smsparser = "smsparser.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
